@@ -23,9 +23,6 @@ import java.util.Base64;
 import javax.crypto.Cipher;
 import javax.crypto.spec.SecretKeySpec;
 
-//import sun.misc.BASE64Decoder;
-//import sun.misc.BASE64Encoder;
-
 public class AESencrp {
 
 	private static final String ALGO = "AES"; //$NON-NLS-1$
@@ -39,7 +36,6 @@ public class AESencrp {
 		c.init(Cipher.ENCRYPT_MODE, key);
 		byte[] encVal = c.doFinal(Data.getBytes());
 		String encryptedValue = Base64.getEncoder().encodeToString(encVal);
-		//String encryptedValue = new BASE64Encoder().encode(encVal);
 		return encryptedValue;
 	}
 
@@ -47,9 +43,8 @@ public class AESencrp {
 		Key key = generateKey();
 		Cipher c = Cipher.getInstance(ALGO);
 		c.init(Cipher.DECRYPT_MODE, key);
-		byte[] decordedValue = Base64.getDecoder().decode(encryptedData);
-		//byte[] decordedValue = new BASE64Decoder().decodeBuffer(encryptedData);
-		byte[] decValue = c.doFinal(decordedValue);
+		byte[] decodedValue = Base64.getDecoder().decode(encryptedData);
+		byte[] decValue = c.doFinal(decodedValue);
 		String decryptedValue = new String(decValue);
 		return decryptedValue;
 	}
